kubernetes/cyphria_applications_roles/login-api/overlay/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cyphria-loginapi-deployment
  labels:
    app.kubernetes.io/name: backend
spec: 
  selector:
    matchLabels:
      app.kubernetes.io/name: loginapi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: loginapi
    spec:
      containers:
        - name: loginapi
          image: ghcr.io/vchen7629/loginapi
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests: 
              cpu: 500m
              memory: 256Mi
