kubernetes/cyphria_applications_roles/login-api/overlay/base/proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: loginapi-proxy
  namespace: frontend
spec: 
  type: ExternalName
  externalName: loginapi-service.backend.svc.cluster.local
  ports: 
    - name: https
      port: 443
      targetPort: 443
      protocol: TCP
