kubernetes/cyphria_applications_roles/login-api/overlay/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loginapi-service
  namespace: backend
  
spec: 
  type: ClusterIP
  selector: 
    app.kubernetes.io/name: loginapi
  ports:
    - port: 443
      targetPort: 3000
      protocol: TCP
      name: https
