kubernetes/cyphria_applications_roles/login-api/overlay/base/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loginapi-ingress
  namespace: backend
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec: 
  ingressClassName: nginx
  rules:
    - host: cyphria.com
      http:
        paths:
        - path: /loginapi(/|$)(.*)
          pathType: ImplementationSpecific
          backend: 
            service:
              name: loginapi-service
              port:
                number: 443
    - host: "*.cyphria.com"
      http:
        paths:
        - path: /loginapi(/|$)(.*)
          pathType: ImplementationSpecific
          backend:
            service:
              name: loginapi-service
              port:
                number: 443
